# turbex

./: README.md  docker-compose-dev.yml  docker-compose.yml
TAD/: FAQ.md  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
backend/healthcheck/: go.mod  main.go
backend/src/consts/: collections.go  main.go
backend/src/database/: main.go
backend/src/handlers/: admin.go  file.go  sessions.go  share.go  status.go  user.go
backend/src/middlewares/: main.go  session.go
backend/src/models/: api.go  database.go  file.go  sessions.go  users.go
backend/src/routes/: admin.go  file.go  main.go  sessions.go  share.go  status.go  user.go
backend/src/routines/: main.go
backend/src/structs/: main.go
deployment/: mongo-init.js
frontend/: Dockerfile  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.cjs
frontend/frontend-svelte/: .prettierrc  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/frontend-svelte/src/: app.html
frontend/frontend-svelte/src/lib/: query.ts  store.ts  useAsync.ts  useCrypt.ts  useQuery.ts
frontend/frontend-svelte/src/routes/: +layout.svelte  +layout.ts
frontend/frontend-svelte/src/types/: file.ts
frontend/src/: app.html
frontend/src/lib/components/: FileTable.svelte  Header.svelte  (+2 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/turbex-crypt/: .dockerignore  Cargo.toml  README.md  index.html
frontend/turbex-crypt/src/: errors.rs  lib.rs
frontend/turbex-crypt/test/: integration-test.js
(+13 files in other folders)
