[package]
name = "turbex-crypt"
version = "0.1.0"
authors = ["djex","TurboThon"]
repository = "https://github.com/TurboThon/turbex"
description = "The wasm crate used by turbex for cryptography on client-side"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.0"
getrandom = { version = "0.2.12", features = ["js"] } # js features is needed for wasm support
p384 = "0.13.0"
pbkdf2 = "0.12.2"
pkcs8 = { version = "0.10.2", features = ["encryption", "pkcs5"] }
rand = "0.8.5"
serde = "1.0.197"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.8"
wasm-bindgen = "0.2"
